# dayz-cmd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  Cargo.toml  README.md  README.ru.md  README.ua.md  _config.yml  dayz-ctl  install
.cursor/plans/: fix_favorites_migration_9c33e663.plan.md  rust_tui_dayz_launcher_75e4f32a.plan.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-06-gap-fixes.md  2026-04-06-launch-parity-steamworks.md  2026-04-06-offline-mode.md  2026-04-06-self-update.md
docs/superpowers/specs/: 2026-04-06-launch-parity-steamworks-design.md  2026-04-06-offline-mode-design.md  2026-04-06-self-update-design.md
src/: app.rs  config.rs  event.rs  launch.rs  main.rs  profile.rs  update.rs
src/api/: battlemetrics.rs  mod.rs  news.rs  offline_releases.rs  releases.rs  servers.rs
src/mods/: manager.rs  types.rs
src/offline/: discovery.rs  install.rs  launch.rs  mod.rs  storage.rs  sync.rs  types.rs
src/server/: filter.rs  mod.rs  runtime.rs  types.rs
src/steam/: mod.rs  workshop.rs
src/ui/: config_screen.rs  direct_connect.rs  direct_connect_setup.rs  filter.rs  info_screen.rs  main_menu.rs  mod.rs  news.rs  offline_browser.rs  offline_setup.rs  password_prompt.rs  popup.rs  server_browser.rs  server_detail.rs  theme.rs  update_prompt.rs
