[package]
name = "dayz-cmd"
version = "0.3.0"
edition = "2021"
description = "DayZ server browser and launcher for Linux"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
steamworks = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
tar = "0.4"
unicode-width = "0.2"

[features]
default = ["steam"]
steam = ["dep:steamworks"]
